--- a/App-bureau9000/app/build.gradle
+++ b/App-bureau9000/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'org.jetbrains.kotlin.android.extensions'
+
 }
 
 android {
